--- a/Classes/Custom/Views/TopBar/TopSearchBar.xib
+++ b/Classes/Custom/Views/TopBar/TopSearchBar.xib
@@ -6,12 +6,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopBar" customModule="Unisys" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TopSearchBar" customModule="Unisys" customModuleProvider="target">
             <connections>
-                <outlet property="buttonLeft" destination="kzq-44-kfG" id="25H-cH-Wb0"/>
-                <outlet property="buttonRight" destination="20w-ea-Yi1" id="8Pa-aM-e2T"/>
-                <outlet property="buttonRight2" destination="n9L-g1-oyb" id="wHS-aS-pEs"/>
-                <outlet property="labelTitle" destination="Qgf-eV-f1X" id="jqI-Qu-Dt2"/>
+                <outlet property="buttonLeft" destination="kzq-44-kfG" id="oa2-Bw-RNQ"/>
+                <outlet property="fieldSearch" destination="prL-RH-qA9" id="GL6-a4-Chq"/>
+                <outlet property="labelTitle" destination="Qgf-eV-f1X" id="NhP-3i-7gV"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -23,41 +22,39 @@
                     <rect key="frame" x="16" y="0.0" width="382" height="124"/>
                     <subviews>
                         <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kzq-44-kfG" userLabel="left button">
-                            <rect key="frame" x="0.0" y="99" width="25" height="25"/>
+                            <rect key="frame" x="0.0" y="92.5" width="25" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="kzq-44-kfG" secondAttribute="height" multiplier="1:1" id="bcR-T3-h5R"/>
                             </constraints>
                             <state key="normal" image="nav_back"/>
+                            <connections>
+                                <action selector="leftClicked:" destination="-1" eventType="touchUpInside" id="tUz-oo-pAw"/>
+                            </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PRUEBA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qgf-eV-f1X" userLabel="title">
-                            <rect key="frame" x="41" y="102" width="259.5" height="20"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="257" verticalHuggingPriority="251" horizontalCompressionResistancePriority="754" text="Vamos a ver que tal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qgf-eV-f1X" userLabel="title">
+                            <rect key="frame" x="41" y="88" width="150" height="34"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="20w-ea-Yi1" userLabel="right button 1">
-                            <rect key="frame" x="357" y="99" width="25" height="25"/>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="prL-RH-qA9" userLabel="search field">
+                            <rect key="frame" x="215" y="88" width="151" height="34"/>
                             <constraints>
-                                <constraint firstAttribute="width" secondItem="20w-ea-Yi1" secondAttribute="height" multiplier="1:1" id="2Od-Yt-xZo"/>
+                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="140" id="lX0-Tp-wDJ"/>
                             </constraints>
-                        </button>
-                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n9L-g1-oyb" userLabel="right button 2">
-                            <rect key="frame" x="316.5" y="99" width="24.5" height="25"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="n9L-g1-oyb" secondAttribute="height" multiplier="1:1" id="oTz-sE-4pA"/>
-                            </constraints>
-                        </button>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstItem="20w-ea-Yi1" firstAttribute="leading" secondItem="n9L-g1-oyb" secondAttribute="trailing" constant="16" id="4bJ-fL-Ca0"/>
-                        <constraint firstAttribute="bottom" secondItem="n9L-g1-oyb" secondAttribute="bottom" id="GzZ-Ww-1Ih"/>
-                        <constraint firstAttribute="bottom" secondItem="kzq-44-kfG" secondAttribute="bottom" id="JQz-VK-b1w"/>
+                        <constraint firstItem="kzq-44-kfG" firstAttribute="centerY" secondItem="Qgf-eV-f1X" secondAttribute="centerY" id="BBM-Gs-eTf"/>
+                        <constraint firstItem="Qgf-eV-f1X" firstAttribute="centerY" secondItem="prL-RH-qA9" secondAttribute="centerY" id="HqT-Rx-n6u"/>
+                        <constraint firstAttribute="trailing" secondItem="prL-RH-qA9" secondAttribute="trailing" constant="16" id="MSV-qV-qNl"/>
                         <constraint firstItem="Qgf-eV-f1X" firstAttribute="leading" secondItem="kzq-44-kfG" secondAttribute="trailing" constant="16" id="MpK-Rq-PLI"/>
-                        <constraint firstAttribute="trailing" secondItem="20w-ea-Yi1" secondAttribute="trailing" id="SVy-P2-5ek"/>
-                        <constraint firstAttribute="bottom" secondItem="Qgf-eV-f1X" secondAttribute="bottom" constant="2" id="Z7D-sj-aCq"/>
-                        <constraint firstItem="n9L-g1-oyb" firstAttribute="leading" secondItem="Qgf-eV-f1X" secondAttribute="trailing" constant="16" id="fcy-og-NZE"/>
-                        <constraint firstAttribute="bottom" secondItem="20w-ea-Yi1" secondAttribute="bottom" id="sfb-zn-EfH"/>
+                        <constraint firstItem="prL-RH-qA9" firstAttribute="bottom" secondItem="Qgf-eV-f1X" secondAttribute="bottom" id="cE3-Pp-Hc7"/>
+                        <constraint firstAttribute="bottom" secondItem="prL-RH-qA9" secondAttribute="bottom" constant="2" id="r6u-8s-g8C"/>
+                        <constraint firstItem="prL-RH-qA9" firstAttribute="leading" secondItem="Qgf-eV-f1X" secondAttribute="trailing" constant="24" id="sJE-al-lUZ"/>
                         <constraint firstItem="kzq-44-kfG" firstAttribute="leading" secondItem="ghQ-Rh-T3B" secondAttribute="leading" id="wkE-XY-aWR"/>
                     </constraints>
                 </view>
@@ -66,10 +63,8 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="ghQ-Rh-T3B" secondAttribute="trailing" constant="16" id="1i0-6T-2DG"/>
                 <constraint firstItem="kzq-44-kfG" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.06" priority="900" id="I6Z-YP-7ww"/>
-                <constraint firstItem="20w-ea-Yi1" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.06" priority="900" id="RzX-te-WmN"/>
                 <constraint firstItem="ghQ-Rh-T3B" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="iMN-uF-aap"/>
                 <constraint firstItem="ghQ-Rh-T3B" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="ltn-qt-9jP"/>
-                <constraint firstItem="n9L-g1-oyb" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.06" priority="900" id="sFS-ek-u8b"/>
                 <constraint firstAttribute="bottom" secondItem="ghQ-Rh-T3B" secondAttribute="bottom" constant="14" id="zmT-bv-9bx"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
