Añadida persistencia de datos a las noticias.

--- a/Classes/Screens/Home/cell/ArticleCell.xib
+++ b/Classes/Screens/Home/cell/ArticleCell.xib
@@ -45,17 +45,27 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DLw-X3-b1Z">
+                                <rect key="frame" x="0.0" y="0.0" width="325" height="338"/>
+                                <connections>
+                                    <action selector="cellClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="5UC-im-Wu6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="v4c-rP-30P" secondAttribute="trailing" constant="16" id="1b5-ku-KmK"/>
                             <constraint firstItem="gzh-G4-Dgy" firstAttribute="leading" secondItem="0mf-mK-fKZ" secondAttribute="leading" constant="8" id="6qD-Th-sUh"/>
+                            <constraint firstItem="DLw-X3-b1Z" firstAttribute="top" secondItem="0mf-mK-fKZ" secondAttribute="top" id="Bnn-0H-TCr"/>
                             <constraint firstItem="Uwi-XP-HWr" firstAttribute="top" secondItem="gzh-G4-Dgy" secondAttribute="bottom" constant="16" id="CCV-MJ-RpH"/>
                             <constraint firstItem="v4c-rP-30P" firstAttribute="top" secondItem="out-Ts-10I" secondAttribute="bottom" constant="18" id="Iwc-Gc-kgg"/>
+                            <constraint firstAttribute="trailing" secondItem="DLw-X3-b1Z" secondAttribute="trailing" id="MQn-Oh-gnB"/>
                             <constraint firstItem="gzh-G4-Dgy" firstAttribute="top" secondItem="v4c-rP-30P" secondAttribute="bottom" constant="8" id="VhB-H4-5ea"/>
                             <constraint firstAttribute="bottom" secondItem="Uwi-XP-HWr" secondAttribute="bottom" constant="16" id="W7f-yn-A2e"/>
                             <constraint firstItem="v4c-rP-30P" firstAttribute="leading" secondItem="0mf-mK-fKZ" secondAttribute="leading" constant="16" id="a9c-zw-thA"/>
+                            <constraint firstItem="DLw-X3-b1Z" firstAttribute="leading" secondItem="0mf-mK-fKZ" secondAttribute="leading" id="eQ6-Yf-Nj3"/>
                             <constraint firstItem="out-Ts-10I" firstAttribute="top" secondItem="0mf-mK-fKZ" secondAttribute="top" id="gBr-z8-uFE"/>
+                            <constraint firstAttribute="bottom" secondItem="DLw-X3-b1Z" secondAttribute="bottom" id="gRd-BO-CtL"/>
                             <constraint firstItem="Uwi-XP-HWr" firstAttribute="leading" secondItem="v4c-rP-30P" secondAttribute="leading" id="iVi-0p-fc6"/>
                             <constraint firstAttribute="trailing" secondItem="out-Ts-10I" secondAttribute="trailing" id="maB-XT-kos"/>
                             <constraint firstItem="Uwi-XP-HWr" firstAttribute="trailing" secondItem="v4c-rP-30P" secondAttribute="trailing" id="ut4-i8-tJ1"/>
